[package]
name = "bdk_tx"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk-tx"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
miniscript = { version = "12", default-features = false }
bdk_coin_select = "0.4.0"
# Is there a reason to prefer rand_core + getrandom as opposed to offering a "rand-std" feature that enables bitcoin/rand-std?
rand_core = { version = "0.9.3", features = ["os_rng"] }
# bdk_chain = { version = "0.21" } # Why was this added?
# We need to think about whether we should depend on bitcoin's rand-std by default
# another option is to have a dedicated function `create_psbt_with_aux_rand`
# bitcoin = { version = "0.32", features = ["rand-std"] }
bitcoin = { version = "0.32", default-features = false }

[dev-dependencies]
bdk_chain = { version = "0.21" }
anyhow = "1"
bdk_tx = { path = "." }
bdk_testenv = "0.11.1"
bdk_bitcoind_rpc = "0.18.0"

[features]
default = ["std"]
std = ["miniscript/std"]

[[example]]
name = "synopsis"

[[example]]
name = "common"
crate-type = ["lib"]
